--- a/fases.html
+++ b/fases.html
@@ -60,7 +60,7 @@
 
         <p>Video de las fases de la Luna:</p>
         <video width="320" height="240" controls>
-            <source src="fases de la luna.mp4 type="video/mp4">
+            <source src="fases de la luna.mp4" type="video/mp4">
             
         </video>
     </div>
